# music-crs-2026

./: .env.example  .gitignore  .gitmodules  .worktreeinclude  CLAUDE.md  LICENSE  changelog.md  docker-compose.milvus.yml  eval_devset.py  index.html  leaderboard.md  notes.md  prepare_submission.sh  pyproject.toml  readme.md  retrospective.html  run_evaluate.py  run_experiment.py  run_inference_blindset.py  run_inference_devset.py  run_inference_talkplay_devset.py  run_pipeline.py  run_rerank_phase1.py  run_snapshot_qu_pilot.py  streamlit_app.py
.claude/: settings.json
.codex/: setup
config/: bm25_devset_retrieval_only.yaml  bm25_devset_retrieval_only_artist_name_only.yaml  bm25_devset_retrieval_only_tag_list_no_release_date.yaml  bm25_devset_retrieval_only_tag_list_only.yaml  bm25_devset_retrieval_only_track_name_only.yaml  bm25_qu_llmrewrite_gemma4_e2b_carryover_guard_v3_devset.yaml  bm25_qu_llmrewrite_gemma4_e2b_catalog_terms_v2_devset.yaml  bm25_qu_llmrewrite_gemma4_e2b_preserve_entities_v1_devset.yaml  bm25_qu_llmrewrite_llama32_1b_preserve_entities_v1_devset.yaml  bm25_qu_llmrewrite_llama32_3b_preserve_entities_v1_devset.yaml  bm25_qu_llmrewrite_qwen25_3b_carryover_guard_v3_devset.yaml  bm25_qu_llmrewrite_qwen25_3b_catalog_terms_v2_devset.yaml  bm25_qu_llmrewrite_qwen25_3b_preserve_entities_v1_devset.yaml  bm25_qu_llmrewrite_qwen3_4b_preserve_entities_v1_devset.yaml  bm25_qu_llmrewrite_smollm2_1p7b_carryover_guard_v3_devset.yaml  bm25_qu_llmrewrite_smollm2_1p7b_catalog_terms_v2_devset.yaml  bm25_qu_llmrewrite_smollm2_1p7b_preserve_entities_v1_devset.yaml  bm25_qu_no_music_history_devset.yaml  dense_bge_base_en_v1_5_devset.yaml  dense_bge_large_en_v1_5_devset.yaml  dense_e5_base_v2_devset.yaml  dense_precomputed_attributes_qwen3_06b_devset.yaml  dense_precomputed_lyrics_qwen3_06b_devset.yaml  dense_precomputed_metadata_qwen3_06b_devset.yaml  dense_qwen3_embedding_0_6b_devset.yaml  dense_qwen3_embedding_4b_devset.yaml  dense_qwen3_embedding_8b_devset.yaml  litellm_qwen3_4b_rewrite_emb3small_devset.yaml  litellm_qwen3_4b_state_dense_devset.yaml  litellm_qwen3_8b_rewrite_emb3small_devset.yaml  llama1b_bert_blindset_A.yaml  llama1b_bert_devset.yaml  llama1b_bm25_blindset_A.yaml  llama1b_bm25_blindset_A_mac.yaml  llama1b_bm25_devset.yaml  llama1b_bm25_devset_mac.yaml  milvus_bm25_with_tag_list_devset.yaml  milvus_hybrid_tag_metadata_devset.yaml  milvus_metadata_qwen3_embedding_0_6b_devset.yaml  talkplay_openrouter_gemma4_31b_it_agentic_hardened_devset_smoke.yaml  (+9 more)
configs/: lancedb_fts_with_tag_list_devset.yaml  litellm_proxy.openrouter.yaml  state_ranker_v10_lgbm_blindset_A.yaml  state_ranker_v10_lgbm_blindset_B.yaml  state_ranker_v10_lgbm_devset.yaml  state_ranker_v10_lgbm_devset_b1cos.yaml  state_ranker_v10_lgbm_devset_control_fresh.yaml  state_ranker_v10_lgbm_devset_fastlocal.yaml  state_ranker_v10_lgbm_devset_nogoal_fresh.yaml  state_ranker_v10_lgbm_devset_visual.yaml  state_ranker_v10_rrf_devset.yaml  v0plus_compiler_all_devset.yaml  v0plus_compiler_all_retrievers_devset.yaml  v0plus_compiler_all_retrievers_reranked_devset.yaml  v0plus_compiler_attributes_devset.yaml  v0plus_compiler_audio_image_devset.yaml  v0plus_compiler_blindset_A.yaml  v0plus_compiler_blindset_A_reranked.yaml  v0plus_compiler_blindset_A_rr2.yaml  v0plus_compiler_bugfix_devset.yaml  v0plus_compiler_devset.yaml  v0plus_compiler_devset_rr2.yaml  v0plus_compiler_image_devset.yaml  v0plus_compiler_image_extractor_v3_devset.yaml  v0plus_compiler_image_qwen3emb4b_vllm_devset.yaml  v0plus_compiler_image_qwen3emb8b_vllm_devset.yaml  v0plus_compiler_keep8_reranked_devset.yaml  v0plus_compiler_metadata_devset.yaml  v0plus_compiler_mm_extractor_v3_devset.yaml  v0plus_compiler_pool_expanded_devset.yaml  v0plus_compiler_pool_expanded_devset_rr2.yaml  v0plus_compiler_pruned_dense_attrs_devset.yaml  v0plus_compiler_pruned_devset.yaml  v0plus_compiler_pruned_resolved_tags_devset.yaml  v0plus_compiler_pruned_safe_tags_devset.yaml  v0plus_compiler_safe_tags_bm25_devset.yaml  v0plus_compiler_textside_v2_devset.yaml  v0plus_compiler_textside_v4_devset.yaml  v0plus_state_ollama_gemma31b.yaml  v0plus_state_ollama_qwen27b.yaml  (+1 more)
data/: README.md  artist_knownfor.json  smoke_test_sessions.json
docs/: anchor_clean_labels.md  approach.html  data.md  evaluation.md  experiment_log.md  litellm_proxy.md  mac_dev.md  modal_setup.md  reproduce_offline_bundle.md  reproduce_reranker.md  retrospective.html  state_extraction_cache.md  submission-architecture.html  submission-architecture.qmd  worktree-setup.md
evaluator/: evaluate_devset.py  evaluate_devset_top20.py  make_ground_truth.py  readme.md
experiments/: CLAUDE.md  README.md  agentic_hardened_handoff_2026-05-05.md  blindset-b-approach-report.html  bm25_devset_retrieval_only.md  bm25_devset_retrieval_only_no_release_date.md  bm25_devset_retrieval_only_tag_list_no_release_date.md  bm25_devset_retrieval_only_tag_list_only.md  bm25_devset_retrieval_only_with_tag_list.md  bm25_qu_last_2_user_turns_devset.md  bm25_qu_last_3_user_turns_devset.md  bm25_qu_last_user_turn_devset.md  bm25_qu_llmrewrite_gemma4_e2b_carryover_guard_v3_devset.md  bm25_qu_llmrewrite_gemma4_e2b_catalog_terms_v2_devset.md  bm25_qu_llmrewrite_gemma4_e2b_preserve_entities_v1_devset.md  (+55 more)
(+1078 files in other folders)
