[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcrs"
version = "0.1.0"
authors = [
    { name = "Music CRS Baselines Team" },
]
description = "Music Conversational Recommender System Baselines"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate>=1.0.1",
    "bm25s>=0.2.13",
    "datasets>=3.1.0",
    "flash-attn; sys_platform == 'linux'",
    "omegaconf>=2.3.0",
    "psutil>=7.2.2",
    "torch>=2.9.1,<2.10",
    "torchaudio",
    "torchvision",
    "transformers>=4.46.3",
]

[tool.setuptools]
packages = ["mcrs"]

[tool.uv]
link-mode = "copy"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

