[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcrs"
version = "0.1.0"
authors = [
    { name = "Music CRS Baselines Team" },
]
description = "Music Conversational Recommender System Baselines"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate>=1.0.1",
    "bm25s>=0.2.13",
    "datasets>=3.1.0",
    "flash-attn; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "litellm[caching]>=1.50",
    "pandas>=2.0",
    "scipy>=1.11",
    "modal>=1.4.2",
    "omegaconf>=2.3.0",
    "pymilvus>=2.6,<3",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "torch>=2.9.1,<2.10",
    "transformers>=4.51.0",
    "lancedb>=0.30.2",
    "rapidfuzz>=3.14",
    "lightgbm>=4.6.0",
    "playwright>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
notebooks = [
    "ipywidgets>=8.0",
    "jupyterlab>=4.0",
    "matplotlib>=3.7",
    "streamlit>=1.35",
]

[project.scripts]
music-dashboard = "mcrs.dashboard:main"
mcrs-debug = "mcrs.debug_cli:main"

[tool.setuptools.packages.find]
include = ["mcrs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
link-mode = "copy"

[tool.uv.sources]
# cu130 (CUDA 13.0) is required for the local GB10 / DGX Spark box (sm_121):
# the cu128 build has no Blackwell GEMM heuristics and falls back to a slow
# generic kernel (~5x slower). cu130 wheels exist for both linux x86_64 (Modal)
# and aarch64 (GB10), and Modal's GPU hosts run a CUDA-13-capable driver (580.x).
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
